--- a/src/app/homepage.css
+++ b/src/app/homepage.css
@@ -124,7 +124,7 @@
  background-size: 100% 100%;
  background-position: center 100%;
  background-repeat: no-repeat;
- padding: 130px;
+
 }
 
 .blog-section {
